# aiotgm

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  version.py
aiotele/: __init__.py  api.py  client.py  constants.py  types.py  update_manager.py  utils.py
aiotgm/: __init__.py  api.py  client.py  constants.py  logger.py  types.py  update_manager.py  utils.py
asynctg/: __init__.py  api.py  client.py  types.py  update_manager.py  utils.py
docs/: conf.py
docs/_build/doctrees/: client.doctree  index.doctree  next_manager.doctree  telegram_error.doctree  types.doctree
docs/_build/html/: .buildinfo  client.html  genindex.html  index.html  next_manager.html  objects.inv  py-modindex.html  search.html  searchindex.js  telegram_error.html  types.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  types.rst.txt
docs/source/: client.rst  conf.py  exceptions.rst  index.rst  installation.rst  next_function.rst  next_manager.rst  requirements.txt  telegram_error.rst  types.rst
tests/: parse_methods.py  parse_types.py  test_func_ok.py  test_types.json  test_types.py  types.json  types.py  types_warnings.txt  warnings.txt
tglib/: __init__.py  api.py  client.py  default_literals.py  http_manager.py  logger.py  objects.py  parse_types.py  test_args.py  test_json.json  test_json.py  test_kwargs.py  test_types.json  test_types.py  types.py  types_warnings.txt  update_manager.py  utils.py
tglib/tests/: parse_types.py  test_func_ok.py  test_types.json  test_types.py
(+4 files in other folders)
