[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asynctg"
version = "1.0.1"
requires-python = ">= 3.8"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "unixtux"}
]
dependencies = [
    "aiohttp>=3.9.1",
    "certifi>=2023.11.17",
    "ujson>=5.9.0"
]

[project.urls]
Repository = "https://github.com/unixtux/asynctg"

[tool.setuptools]
packages = ["asynctg"]
